--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -23,7 +23,6 @@
     </style>
 
 </head>
-
 <body class="hold-transition sidebar-mini">
     <!-- map -->
 
@@ -303,7 +302,7 @@
         <div class="content-wrapper">
             <!-- Main content -->
             <div class="content">
-                <div id="container" onclick="fullScreen(this);" class="container-fluid">
+                <div id="container" ondblclick="fullScreen(this);" class="container-fluid">
                     {% block header %} {% endblock header %} {%block content%} {%endblock%}
                 </div>
                 <!-- /.container-fluid -->
