数据接口，完成
Signed-off-by: ymm <yangmeng234@qq.com>

--- a/Industrial_Logs/templates/Industrial_Logs/PTH_PM.html
+++ b/Industrial_Logs/templates/Industrial_Logs/PTH_PM.html
@@ -19,7 +19,17 @@
 				success: function(data) {//请求成功完成后要执行的方法
                     console.log(data);
 				    PTH_PM_1(data);
-                    PTH_PM_2();
+				}
+        });
+        $.ajax({
+				url: "/getHPM",
+				type: "POST",
+                async: false,
+                cache:false,
+				dataType: "json", //返回数据格式为json
+				success: function(data) {//请求成功完成后要执行的方法
+				    console.log(data);
+                    PTH_PM_2(data);
 				}
         });
 
