--- a/Industrial_Logs/templates/Industrial_Logs/P_TH.html
+++ b/Industrial_Logs/templates/Industrial_Logs/P_TH.html
@@ -5,13 +5,21 @@ P_TH{% endblock header %} P_TH{% block content %}
     <div id="back" class="main" style="height:90%;">
         <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">压力-温湿度</h1>
         <div style="border:2px solid #666;width:80%;height: 80%;float:left" id="P_TH_1"  class="chart-container"></div>
-        {{ dict }}
-
     </div>
     <script>
     $(function () {
-        P_TH_1();
-        P_TH_2()
+        $.ajax({
+				url: "/getPPM",
+				type: "POST",
+                async: false,
+                cache:false,
+				dataType: "json", //返回数据格式为json
+				success: function(data) {//请求成功完成后要执行的方法
+                    console.log(data);
+                    P_TH_1(data);
+
+				}
+        });
     })
     </script>
 {% endblock content %}
