--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="{{STATIC_URL}}plugins/fontawesome-free/css/all.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="{{STATIC_URL}}dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}font-awesome/css/font-awesome.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
     <!-- 我的css和js -->
     <link href="{{STATIC_URL}}css/playground.css" media="all" rel="stylesheet" type="text/css" />
+{#    <link href="//netdna.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">#}
     <style>
         #container{
             padding: 0;
@@ -116,7 +118,7 @@
                with font-awesome or any other icon font library -->
                         <li class="nav-item">
                             <a href="{% url 'Industrial_Logs:topics' %}" class="nav-link active">
-                                <i class="nav-icon fas fa-th"></i>
+                                <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
                                     仪表盘
                                     <span class="right badge badge-danger" id="btn" onclick="btnClick(event);" >显示</span>
@@ -125,7 +127,7 @@
                         </li>
                         <li class="nav-item has-treeview menu-open">
                             <a href="#" class="nav-link ">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <i class="fa fa-microchip"></i>
                                 <p>
                                     传感器
                                     <i class="right fas fa-angle-left"></i>
@@ -155,7 +157,7 @@
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:Sensor_Proportion' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-pie-chart"></i>
                                         <p>传感器信息</p>
                                     </a>
                                 </li>
@@ -167,7 +169,7 @@
 
                         <li class="nav-item has-treeview menu-open">
                             <a href="#" class="nav-link ">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <i class="fa fa-sitemap"></i>
                                 <p>
                                     Hadoop平台
                                     <i class="right fas fa-angle-left"></i>
@@ -177,35 +179,35 @@
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-file"></i>
                                         <p>原始数据容量</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-file-archive-o"></i>
                                         <p>预处理后容量</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-battery-three-quarters"></i>
                                         <p>HDFS的状态</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-cube"></i>
                                         <p>Namenode</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:realdev_tem' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-cubes"></i>
                                         <p>Datanode</p>
                                     </a>
                                 </li>
@@ -216,7 +218,7 @@
 
                         <li class="nav-item has-treeview menu-open" >
                             <a href="#" class="nav-link ">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                                <i class="fa fa-industry"></i>
                                 <p>
                                     历史数据分析
                                     <i class="right fas fa-angle-left"></i>
@@ -226,22 +228,22 @@
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:BME280' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-bar-chart"></i>
                                         <p>时间-压力/温湿度/PM</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:PTH_PM' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
+                                        <i class="fa fa-area-chart"></i>
                                         <p>温湿度-PM</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:P_TH' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>压力-温湿度</p>
+                                        <i class="fa fa-thermometer-three-quarters"></i>
+                                        <p>温湿度-压力</p>
                                     </a>
                                 </li>
 
@@ -270,23 +272,24 @@
 {#                            </ul>#}
 {#                        </li>#}
                         <li class="nav-item has-treeview menu-open">
-                            <a href="#" class="nav-link ">
-                                <i class="nav-icon fas fa-tachometer-alt"></i>
+                             <a href="{% url 'Industrial_Logs:realTemAndHum' %}" class="nav-link ">
+                                <i class="fa fa-line-chart"></i>
                                 <p>
+
                                     实时数据展示
-                                    <i class="right fas fa-angle-left"></i>
+{#                                    <i class="right fas fa-angle-left"></i>#}
                                 </p>
                             </a>
-                            <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a href="{% url 'Industrial_Logs:realTemAndHum' %}" class="nav-link ">
-                                        <!-- 添加active类菜单高亮 -->
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>温湿度实时数据</p>
-                                    </a>
-                                </li>
-
-                            </ul>
+{#                            <ul class="nav nav-treeview">#}
+{#                                <li class="nav-item">#}
+{#                                    <a href="{% url 'Industrial_Logs:realTemAndHum' %}" class="nav-link ">#}
+{#                                        <!-- 添加active类菜单高亮 -->#}
+{#                                        <i class="fa fa-line-chart"></i>#}
+{#                                        <p>温湿度实时数据</p>#}
+{#                                    </a>#}
+{#                                </li>#}
+{##}
+{#                            </ul>#}
 
                         </li>
 
