--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -28,7 +28,7 @@
 
     <!-- jQuery -->
 {#    <script src="{{STATIC_URL}}plugins/jquery/jquery.min.js"></script>#}
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js">
+    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="{{STATIC_URL}}plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
