更新界面侧边栏图标库为4.7

--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -156,6 +156,7 @@
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:Sensor_Proportion' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
+{#                                        <i class="fa fa-pie-chart"></i>#}
                                         <i class="fa fa-pie-chart"></i>
                                         <p>传感器信息</p>
                                     </a>
