菜单/大屏修改，去除搜索框等无用选项

--- a/Industrial_Logs/templates/Industrial_Logs/P_TH.html
+++ b/Industrial_Logs/templates/Industrial_Logs/P_TH.html
@@ -1,5 +1,5 @@
 {% extends "Industrial_Logs/base.html" %} {% block header %}
-P_TH{% endblock header %} P_TH{% block content %}
+{% endblock header %} P_TH{% block content %}
 
     <script src="{{STATIC_URL}}dist/js/P_TH.js"></script>
     <div id="back" class="main" style="height:90%;">
