--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -43,7 +43,7 @@
 {#    <script src="{{STATIC_URL}}js/fullscreen.js"></script>#}
 {#    <script src="{{STATIC_URL}}js/localFullScreen.js"></script>#}
 {#    <script src="{{STATIC_URL}}js/echarts.min.js"></script>#}
-<div id="back">
+{#<div id="back">#}
     <div class="wrapper">
         <!-- Navbar -->
         <nav class="main-header navbar navbar-expand navbar-white navbar-light">
@@ -322,7 +322,7 @@
             <strong>Copyright &copy; 2020 All rights reserved.</strong>
     </footer>
   </div>
-</div>
+{#</div>#}
 
   <!-- ./wrapper -->
 <script>
