--- a/Industrial_Logs/templates/Industrial_Logs/topics.html
+++ b/Industrial_Logs/templates/Industrial_Logs/topics.html
@@ -1,5 +1,6 @@
 {% extends "Industrial_Logs/base.html" %} {% block header %} {% endblock header %} {% block content %}
     <script src="{{ STATIC_URL }}dist/js/monitor.js"></script>
+    <script src="{{STATIC_URL}}dist/js/OtherCharts.js"></script>
     <div id="back" class="main" style="height:90%;">
 
         <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 40px;">
@@ -50,12 +51,12 @@
             </div>
         </div>
         <div id="layer03" class="layer" style="height:40%;">
-            <div id="layer03_left" style="width:48%;" class="layer03-panel">
-                <div id="layer03_left_label01" class="layer03-left-label">接入机型占比</div>
-                <div id="layer03_left_01" class="layer03-left-chart" style="width:16%;">
-                    <canvas width="100" height="200" style="margin:30px 0 0 20px;"></canvas>
-                </div>
-                <div id="layer03_left_02" class="layer03-left-chart" style="width:80%;"></div>
+            <div id="layer03_left" style="width:48%;" class="layer03-panel">  {# 传感器类型占比饼图 #}
+{#                <div id="layer03_left_label01" class="layer03-left-label">接入机型占比</div>#}
+{#                <div id="layer03_left_01" class="layer03-left-chart" style="width:16%;">#}
+{#                    <canvas width="100" height="200" style="margin:30px 0 0 20px;"></canvas>#}
+{#                </div>#}
+                <div id="sensor_proportion_1" class="layer03-left-chart" style="width:100%;"></div>
 
             </div>
             <div id="layer03_right" style="width:50%;" class="layer03-panel">
@@ -96,10 +97,11 @@
             drawLayer02Label($("#layer02_05 canvas").get(0), "当前任务个数", 40, 200);
             drawLayer02Label($("#layer02_06 canvas").get(0), "当前集群数", 50, 200);
 
-            renderLegend();
+            {#renderLegend();#}
 
             //饼状图
-            renderChartBar01();
+            proportion({{ kind |safe}},{{ count |safe}});
+            {#renderChartBar01();#}
             //renderChartBar02();
 
             //存储
