--- a/Industrial_Logs/templates/Industrial_Logs/BME280.html
+++ b/Industrial_Logs/templates/Industrial_Logs/BME280.html
@@ -5,11 +5,51 @@
 {% block content %}
     <script src="{{STATIC_URL}}dist/js/bme280.js"></script>
     <div id="back" class="main" style="height:90%;">
-        <h1 style="color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">数据信息</h1>
-        <div style="border:2px solid #666;width:49%;height: 40%;float:left" id="chart_BME280_1"  class="chart-container"></div>
-        <div style="border:2px solid #666;width:49%;height: 40%;float:right" id="chart_BME280_2" class="chart-container"></div>
-        <div style="border:2px solid #666;width:100%;height: 50%;float:left;margin-top: 2%" id="chart_BME280_3" class="chart-container"></div>
+        <h1 style="width:85%; color:wheat;text-align: center;font-family:cursive;font-weight:700;top:-20px;position: relative;top: 10px;">时间-压力/温度/湿度/PM(同比）</h1>
+        <div style=" border:2px solid red; width:80%; height: 95%;margin:0px 40px" id=""  class="chart-container">
+            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px" id="box1"  class="chart-container" name="box">
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id=""  class="chart-container"></div>压力
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id=""  class="chart-container"></div>
+            </div>
+            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px;display: none" id="box2"  class="chart-container" name="box">
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id=""  class="chart-container"></div>
+                温度
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id=""  class="chart-container"></div>
+            </div>
+            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px; display: none" id="box3"  class="chart-container" name="box">
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id=""  class="chart-container"></div>湿度
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id=""  class="chart-container"></div>
+            </div>
+            <div style=" float:left;border:2px solid red;width:70%; height: 100%;margin:0px; display: none" id="box4"  class="chart-container" name="box">
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left;" id=""  class="chart-container"></div>PM
+                <div style="border:2px solid #666;width:100%; height: 50%;float:left" id=""  class="chart-container"></div>
+            </div>
+            <div style=" float:right;border:2px solid red;width:29%; height: 100%;margin:0px;" id=""  class="chart-container">
+{#                <a href="#" style="border:2px solid #666;width:100%;height: 23%;float:left;display:inline-block" onclick="show(1)">#}
+                <div style="border:2px solid #666;width:100%;height: 23%;" id="chart_BME280_0"  class="chart-container" onclick="show(1)">时间-压力</div>
+                <div style="border:2px solid #666;width:100%;height: 23%;" id="chart_BME280_2"  class="chart-container" onclick="show(2)">时间-温度</div>
+                <div style="border:2px solid #666;width:100%;height: 23%;" id="chart_BME280_1"  class="chart-container" onclick="show(3)">时间-湿度</div>
+                <div style="border:2px solid #666;width:100%;height: 23%;" id="chart_BME280_3"  class="chart-container" onclick="show(4)">时间-PM</div>
+            </div>
+        </div>
+
+{#        <div style="border:2px solid #666;width:49%;height: 40%;float:left" id="chart_BME280_1"  class="chart-container"></div>#}
+{#        <div style="border:2px solid #666;width:49%;height: 40%;float:right" id="chart_BME280_2" class="chart-container"></div>#}
+{#        <div style="border:2px solid #666;width:100%;height: 50%;float:left;margin-top: 2%" id="chart_BME280_3" class="chart-container"></div>#}
     </div>
+<script>
+function show(id){
+    var boxs = document.getElementsByName("box")
+    for (var i = 0 ; i < boxs.length ; i++){
+        if (boxs[i].id == "box"+id ){
+            boxs[i].style.display=""
+        }else{
+            boxs[i].style.display="none"
+        }
+    }
+}
+
+</script>
     <script>
     $(function () {
         $.ajax({
