--- a/Industrial_Logs/templates/Industrial_Logs/base.html
+++ b/Industrial_Logs/templates/Industrial_Logs/base.html
@@ -229,21 +229,21 @@
                                     <a href="{% url 'Industrial_Logs:BME280' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
                                         <i class="fa fa-bar-chart"></i>
-                                        <p>时间-压力/温湿度/PM</p>
+                                        <p>时间-压力/温湿度/PM（同比）</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:PTH_PM' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
                                         <i class="fa fa-area-chart"></i>
-                                        <p>温湿度-PM</p>
+                                        <p>温湿度-PM/压力</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="{% url 'Industrial_Logs:P_TH' %}" class="nav-link ">
                                         <!-- 添加active类菜单高亮 -->
                                         <i class="fa fa-thermometer-three-quarters"></i>
-                                        <p>温湿度-压力</p>
+                                        <p>时间-压力/温湿度/PM（环比）</p>
                                     </a>
                                 </li>
 
@@ -305,7 +305,7 @@
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
             <!-- Main content -->
-            <div class="content">
+            <div class="content" >
                 <div id="container" ondblclick="fullScreen(this);" class="container-fluid">
                     {% block header %} {% endblock header %} {%block content%} {%endblock%}
                 </div>
