实时数据展示，实时数据数据库连接
Signed-off-by: ymm <yangmeng234@qq.com>

--- a/Industrial_Logs/templates/Industrial_Logs/real_TemAndHum.html
+++ b/Industrial_Logs/templates/Industrial_Logs/real_TemAndHum.html
@@ -15,10 +15,11 @@
 
     {#实时温度，湿度查询#}
         {#console.log({{ dic }})#}
+    $(function () {
         $.ajax({
             url: "/getRealData",
             type: "POST",
-            async: false,
+            async: true,
             cache: false,
             dataType: "json", //返回数据格式为json
             success: function (data) {//请求成功完成后要执行的方法
@@ -26,6 +27,8 @@
                 realTemAndHum_data(data);
             }
         });
+    })
+
 
     </script>
 {% endblock content %}
